--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="main-text">
       <section class="content-section card-why">
         <h2 class="title section_title text">Почему сосредоточиться так сложно</h2>
-        <div class="article">
+        <div class="article_group">
           <article class="article_advice">
             <h3 class="title text">Многозадачность</h3>
             <p class="card__text text">
@@ -78,31 +78,33 @@
 
       <section class="content-section card-what">
         <h2 class="title section_title text">Что снижает концентрацию внимания?</h2>
-        <article class="article_advice paragraph_multitasking">
-          <h3 class="title text ">Многозадачность</h3>
-          <p class="card__text text">
-            Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
-          </p>
-        </article>
-
-        <article class="article_advice paragraph_food">
-          <h3 class="title text">Еда</h3>
-          <p class="card__text text">
-            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
-          </p>
-        </article>
-
-        <article class="article_advice paragraph_gadgets">
-          <h3 class="title text">Гаджеты</h3>
-          <p class="card__text text">
-            Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
-          </p>
-        </article>
+        <div class="article_group">
+          <article class="article_advice">
+            <h3 class="title text ">Многозадачность</h3>
+            <p class="card__text text">
+              Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </article>
+  
+          <article class="article_advice">
+            <h3 class="title text">Еда</h3>
+            <p class="card__text text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+            </p>
+          </article>
+  
+          <article class="article_advice">
+            <h3 class="title text">Гаджеты</h3>
+            <p class="card__text text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </article>
+        </div>
       </section>
 
       <section class="content-section card-how">
         <h2 class="title section_title text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <div class="article">
+        <div class="article_group">
           <h3 class="title text">5 простых (на самом деле не очень) советов</h3>
 
           <article class="article_advice">
